--- a/assets/styles/components/_wrapper.scss
+++ b/assets/styles/components/_wrapper.scss
@@ -1,15 +1,15 @@
 .wrapper {
-  @apply p-4 border rounded-lg overflow-hidden;
+  @apply p-4 border rounded-lg overflow-hidden transition duration-300;
 
   &-style {
-    @apply border-gray-300 bg-white dark:bg-gray-800 dark:border-gray-700;
+    @apply border-gray-300 dark:border-gray-700 bg-white dark:bg-gray-800;
   }
   &-size {
     @apply md:mt-0 w-96;
   }
 
   &-green {
-    @apply border-green-300 bg-green-400 dark:bg-green-800 dark:border-green-700;
+    @apply flex items-center p-4 text-sm text-green-800 border border-green-300 rounded-lg bg-green-100 dark:bg-gray-900 dark:text-green-400 dark:border-green-800 hover:bg-white dark:hover:bg-gray-800;
   }
 
   &-orange {
@@ -17,7 +17,7 @@
   }
 
   &-red {
-    @apply border-red-300 bg-red-400 dark:bg-red-800 dark:border-red-700;
+    @apply flex items-center p-4 text-sm text-red-800 border border-red-300 rounded-lg bg-red-100 dark:bg-gray-900 dark:text-red-400 dark:border-red-800 hover:bg-white dark:hover:bg-gray-800;
   }
 
   &-blue {
@@ -36,8 +36,4 @@
     @apply p-0;
   }
 
-}
-
-a.wrapper {
-  @apply hover:border-primary transition duration-500;
 }
