--- a/templates/monitor/new.html.twig
+++ b/templates/monitor/new.html.twig
@@ -10,8 +10,8 @@
     <section class="wrapper wrapper-style grid gap-4 lg:gap-6">
 
         <div class="flex justify-center">
-            <div class="rounded-lg bg-yellow-600 bg-opacity-30 border border-yellow-400 p-2 flex text-yellow-300 space-x-4">
-                <i data-feather="alert-triangle"></i>
+            <div class="wrapper wrapper-yellow lg:space-x-4">
+                <i class="hidden lg:block" data-feather="alert-triangle"></i>
                 <p><strong>Attention : </strong>Les moniteurs ne sont la <strong>QUE</strong> pour les <strong>ressources</strong>. Pour les équipements, ajoutez plutôt une
                     <a class="text-tertiary-400" href="{{ path("app_sale_new") }}">vente</a></p>
             </div>
