--- a/assets/styles/components/_wrapper.scss
+++ b/assets/styles/components/_wrapper.scss
@@ -9,7 +9,7 @@
   }
 
   &-green {
-    @apply flex items-center p-4 text-sm text-green-800 border border-green-300 rounded-lg bg-green-100 dark:bg-gray-900 dark:text-green-400 dark:border-green-800 hover:bg-white dark:hover:bg-gray-800;
+    @apply flex items-center p-4 text-sm text-green-800 border border-green-300 rounded-lg bg-green-100 dark:bg-gray-900 dark:text-green-400 dark:border-green-800;
   }
 
   &-orange {
@@ -17,7 +17,7 @@
   }
 
   &-red {
-    @apply flex items-center p-4 text-sm text-red-800 border border-red-300 rounded-lg bg-red-100 dark:bg-gray-900 dark:text-red-400 dark:border-red-800 hover:bg-white dark:hover:bg-gray-800;
+    @apply flex items-center p-4 text-sm text-red-800 border border-red-300 rounded-lg bg-red-100 dark:bg-gray-900 dark:text-red-400 dark:border-red-800;
   }
 
   &-blue {
@@ -29,7 +29,7 @@
   }
 
   &-yellow {
-    @apply border-yellow-300 bg-yellow-400 dark:bg-yellow-800 dark:border-yellow-700;
+    @apply flex items-center p-4 text-sm text-yellow-800 border border-yellow-300 rounded-lg bg-yellow-100 dark:bg-gray-900 dark:text-yellow-400 dark:border-yellow-800;
   }
 
   &-p-0 {
