--- a/templates/monitor/index.html.twig
+++ b/templates/monitor/index.html.twig
@@ -26,8 +26,7 @@
             </form>
             <section class="grid lg:grid-cols-2 xl:grid-cols-4 gap-4">
                 {% for monitorData in monitorsWithAvgPrices %}
-                    {# {{ path('app_resource_show', {'id': data.resourceId}) }} #}
-                    <a href="#" class="wrapper wrapper-style hover:shadow-2xl transition duration-300 relative grid gap-2">
+                    <a href="{{ path('app_monitor_show', {'id': monitorData.0.id}) }}" class="wrapper wrapper-style hover:shadow-2xl transition duration-300 relative grid gap-2">
                         <div class="flex justify-between">
                             <div class="grid gap-1">
                                 <h3 class="text-2xl font-bold w-full">{{ monitorData.0.resource.name }}</h3>
