--- a/templates/monitor/show.html.twig
+++ b/templates/monitor/show.html.twig
@@ -1,44 +1,25 @@
-{# templates/monitor/list.html.twig #}
+{% extends 'base.html.twig' %}
+
+{% block title %}Détails du Moniteur{% endblock %}
 
 {% block body %}
-    <section class="wrapper wrapper-style wrapper-p-0 overflow-x-auto">
-        <table class="w-full text-sm text-left rtl:text-right">
-            <thead class="text-xs text-gray-700 uppercase dark:text-gray-400">
-            <tr class="border-b border-gray-300 dark:border-gray-700">
-                <th scope="col" class="p-4 align-middle">
-                    <span class="hidden sm:block">Lot de </span>
-                    <span class="text-primary-400 text-lg mt-1 drop-shadow-2xl">1</span></th>
-                <th scope="col" class="p-4">
-                    <span class="hidden sm:block">Lot de </span>
-                    <span class="text-primary-400 text-lg mt-1 drop-shadow-2xl">10</span>
-                </th>
-                <th scope="col" class="p-4">
-                    <span class="hidden sm:block">Lot de </span>
-                    <span class="text-primary-400 text-lg mt-1 drop-shadow-2xl">100</span>
-                </th>
-                <th scope="col" class="p-4">
-                    <span class="sr-only">Actions</span>
-                </th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for monitor in monitors %}
-                <tr class="hover:bg-opacity-50 border-b border-gray-300 dark:border-gray-700" data-monitor-id="{{ monitor.id }}" id="monitor-{{ monitor.id }}">
-                    <td class="p-4" data-type="pricePer1">{{ monitor.pricePer1 }}</td>
-                    <td class="p-4" data-type="pricePer10">{{ monitor.pricePer10 }}</td>
-                    <td class="p-4" data-type="pricePer100">{{ monitor.pricePer100 }}</td>
-                    <td class="p-4">
-                        <button class="deleteMonitorBtn w-full text-right text-red-500 hover:text-red-600 dark:text-red-400 dark:hover:text-red-500 transition duration-300 hidden sm:block" data-monitor-id="{{ monitor.id }}">
-                            Supprimer
-                        </button>
-                    </td>
-                </tr>
+    <h1>{{ monitor.resource.name }}</h1>
+    <img src="{{ monitor.resource.imgUrl }}" alt="">
+    <div>
+        <p>Average Price One: {{ aggregates.avgPriceOne }}</p>
+        <p>Average Price Ten: {{ aggregates.avgPriceTen }}</p>
+        <p>Average Price Hundred: {{ aggregates.avgPriceHundred }}</p>
+        <p>Price Count: {{ aggregates.priceCount }}</p>
+    </div>
+    {% if monitor.prices is defined %}
+        <div>
+            {% for price in monitor.prices %}
+                <div>
+                    <p>Price One: {{ price.priceOne }}</p>
+                    <p>Price Ten: {{ price.priceTen }}</p>
+                    <p>Price Hundred: {{ price.priceHundred }}</p>
+                </div>
             {% endfor %}
-            </tbody>
-        </table>
-    </section>
+        </div>
+    {% endif %}
 {% endblock %}
-
-
-
-
