--- a/assets/styles/components/_form.scss
+++ b/assets/styles/components/_form.scss
@@ -43,7 +43,9 @@
   }
 
   &-checkbox {
-    @apply text-primary-400 border border-gray-300 bg-gray-200 focus:ring focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800;
+    @apply text-primary-400 border border-gray-300 bg-gray-200 focus:ring focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800 w-4 h-4 checked:bg-primary-400;
+    -moz-appearance:none;
+    -webkit-appearance:none;
   }
 }
 
