--- a/assets/styles/components/_wrapper.scss
+++ b/assets/styles/components/_wrapper.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  @apply p-4 border rounded-lg overflow-hidden transition duration-300;
+  @apply p-4 border rounded-lg overflow-hidden;
 
   &-style {
     @apply border-gray-300 dark:border-gray-700 bg-white dark:bg-gray-800;
@@ -9,27 +9,27 @@
   }
 
   &-green {
-    @apply flex items-center p-4 text-sm text-green-800 border border-green-300 rounded-lg bg-green-100 dark:bg-gray-900 dark:text-green-400 dark:border-green-800;
+    @apply flex items-center p-4 text-sm text-green-500 border border-green-300 rounded-lg dark:bg-gray-900 dark:text-green-400 dark:border-green-400 bg-white;
   }
 
   &-orange {
-    @apply border-orange-300 bg-orange-400 dark:bg-orange-800 dark:border-orange-700;
+    @apply flex items-center p-4 text-sm text-orange-500 border border-orange-300 rounded-lg dark:bg-gray-900 dark:text-orange-400 dark:border-orange-400 bg-white;
   }
 
   &-red {
-    @apply flex items-center p-4 text-sm text-red-800 border border-red-300 rounded-lg bg-red-100 dark:bg-gray-900 dark:text-red-400 dark:border-red-800;
+    @apply flex items-center p-4 text-sm text-red-500 border border-red-300 rounded-lg dark:bg-gray-900 dark:text-red-400 dark:border-red-400 bg-white;
   }
 
   &-blue {
-    @apply border-blue-300 bg-blue-400 dark:bg-blue-800 dark:border-blue-700;
+    @apply flex items-center p-4 text-sm text-blue-500 border border-blue-300 rounded-lg dark:bg-gray-900 dark:text-blue-400 dark:border-blue-400 bg-white;
   }
 
   &-pink {
-    @apply border-pink-300 bg-pink-400 dark:bg-pink-800 dark:border-pink-700;
+    @apply flex items-center p-4 text-sm text-pink-500 border border-pink-300 rounded-lg dark:bg-gray-900 dark:text-pink-400 dark:border-pink-400 bg-white;
   }
 
   &-yellow {
-    @apply flex items-center p-4 text-sm text-yellow-800 border border-yellow-300 rounded-lg bg-yellow-100 dark:bg-gray-900 dark:text-yellow-400 dark:border-yellow-800;
+    @apply flex items-center p-4 text-sm text-yellow-500 border border-yellow-300 rounded-lg dark:bg-gray-900 dark:text-yellow-400 dark:border-yellow-400 bg-white;
   }
 
   &-p-0 {
