--- a/assets/styles/components/_form.scss
+++ b/assets/styles/components/_form.scss
@@ -22,7 +22,7 @@
 
   //Form Submit
   &-submit {
-    @apply inline-block text-white bg-primary-400 font-medium text-lg px-8 py-2.5 text-center;
+    @apply w-1/2 px-5 py-2 text-sm tracking-wide text-white transition-colors duration-200 bg-primary-500 rounded-lg shrink-0 sm:w-auto hover:bg-primary-600 dark:hover:bg-primary-500 dark:bg-primary-600 flex items-center justify-center;
 
     &:focus {
       @apply outline-none ring-primary-400;
@@ -43,7 +43,7 @@
   }
 
   &-checkbox {
-    @apply text-primary-400 border border-gray-300 bg-gray-200 focus:ring focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800 w-4 h-4 checked:bg-primary-400;
+    @apply text-primary-400 border border-gray-300 bg-gray-200 focus:ring focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800 w-4 h-4 checked:bg-primary-400 dark:checked:bg-primary-400;
     -moz-appearance:none;
     -webkit-appearance:none;
   }
