--- a/templates/legal_mentions/index.html.twig
+++ b/templates/legal_mentions/index.html.twig
@@ -14,7 +14,7 @@
 
             <section class="grid gap-4">
                 <h2 class="text-primary-500 dark:text-primary-400">Propriété intellectuelle</h2>
-                <p>Les contenus de [Nom du site], incluant les textes, graphiques, images, vidéos, et logos, sont la propriété de Monifus et sont protégés par la législation sur la propriété intellectuelle. Toute reproduction, modification, distribution ou publication de ces contenus sans autorisation expresse de Monifus est strictement interdite.</p>
+                <p>Les contenus de Monifus, incluant les ressources, images, vidéos, et données, sont la propriété d'Ankama.</p>
             </section>
 
             <section class="grid gap-4">
