:sparkles: Add anti botting warning

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -16,4 +16,10 @@
 
         {{ include('includes/documentation.html.twig') }}
     </div>
+
+    <div class="wrapper wrapper-yellow uppercase justify-center">
+        <i class="hidden md:block" data-feather="alert-triangle"></i>
+        <p class="md:mx-4">Aucun bot n'est utilisé sur ce site web. Ni aucun système de lecture de donnée du jeu. Tout doit être renseigné manuellement.</p>
+        <i class="hidden md:block" data-feather="alert-triangle"></i>
+    </div>
 {% endblock body %}
