--- a/templates/monitor/show.html.twig
+++ b/templates/monitor/show.html.twig
@@ -8,7 +8,7 @@
             <section class="wrapper wrapper-style flex justify-between">
                 <div class="grid gap-2">
                     <h1 class="text-4xl">{{ monitor.resource.name }}</h1>
-                    <p class="flex items-center uppercase text-xs text-gray-400 dark:text-gray-500">Nombre de moniteurs : <span class="ml-2 text-green-400 font-bold">{{ aggregates.priceCount }}</span></p>
+                    <p class="flex items-center uppercase text-xs">Nombre de moniteurs : <span class="ml-2 text-green-400 font-bold">{{ aggregates.priceCount }}</span></p>
                 </div>
                 <img class="h-20 w-20" src="{{ monitor.resource.imgUrl }}" alt="Image de la ressource {{ monitor.resource.imgUrl }}">
             </section>
@@ -17,22 +17,22 @@
 
         <div class="grid gap-4 lg:grid-cols-3 h-full">
             <div class="wrapper wrapper-style grid gap-4">
-                <p class="uppercase text-xs text-gray-400 dark:text-gray-500 flex items-center">Moyenne lot de<span class="mx-2 text-green-400 font-bold">1</span></p>
-                <div class="flex items-center">
+                <p class="uppercase text-xs flex items-center">Moyenne lot de<span class="mx-2 text-green-400 font-bold">1</span></p>
+                <div class="flex items-center dark:text-white">
                     <span class="text-4xl font-bold leading-6">{{ aggregates.avgPriceOne|number_format(0, '.', ' ') }}</span>
                     <img class="ml-2 w-6 h-6" src="{{ asset('uploads/kamas.webp') }}" alt="Icone kamas">
                 </div>
             </div>
             <div class="wrapper wrapper-style grid gap-4">
-                <p class="uppercase text-xs text-gray-400 dark:text-gray-500 flex items-center">Moyenne lot de<span class="mx-2 text-green-400 font-bold">10</span></p>
-                <div class="flex items-center">
+                <p class="uppercase text-xs flex items-center">Moyenne lot de<span class="mx-2 text-green-400 font-bold">10</span></p>
+                <div class="flex items-center dark:text-white">
                     <span class="text-4xl font-bold leading-6">{{ aggregates.avgPriceTen|number_format(0, '.', ' ') }}</span>
                     <img class="ml-2 w-6 h-6" src="{{ asset('uploads/kamas.webp') }}" alt="Icone kamas">
                 </div>
             </div>
             <div class="wrapper wrapper-style grid gap-4">
-                <p class="uppercase text-xs text-gray-400 dark:text-gray-500 flex items-center">Moyenne lot de<span class="mx-2 text-green-400 font-bold">100</span></p>
-                <div class="flex items-center">
+                <p class="uppercase text-xs flex items-center">Moyenne lot de<span class="mx-2 text-green-400 font-bold">100</span></p>
+                <div class="flex items-center dark:text-white">
                     <span class="text-4xl font-bold leading-6">{{ aggregates.avgPriceHundred|number_format(0, '.', ' ') }}</span>
                     <img class="ml-2 w-6 h-6" src="{{ asset('uploads/kamas.webp') }}" alt="Icone kamas">
                 </div>
