--- a/templates/sale/includes/_items.html.twig
+++ b/templates/sale/includes/_items.html.twig
@@ -1,6 +1,6 @@
 <section class="grid gap-4 lg:grid-cols-2 lg:gap-6 2xl:grid-cols-4">
     <div class="wrapper wrapper-green flex justify-between items-center text-white font-semibold">
-        <h2>Investi :</h2>
+        <h2 class="text-sm uppercase">Investi :</h2>
 
         <div class="flex items-center">
             <p class="text-lg">
@@ -15,7 +15,7 @@
     </div>
 
     <div class="wrapper wrapper-green flex justify-between items-center text-white font-semibold">
-        <h2>Profit net :</h2>
+        <h2 class="text-sm uppercase">Profit net :</h2>
 
         <div class="flex items-center">
             <p class="text-lg">
@@ -30,7 +30,7 @@
     </div>
 
     <div class="wrapper wrapper-green flex justify-between items-center text-white font-semibold">
-        <h2>Profit % :</h2>
+        <h2 class="text-sm uppercase">Profit % :</h2>
 
         <div class="flex items-center">
             <p class="text-lg">
@@ -46,7 +46,7 @@
     </div>
 
     <div class="wrapper wrapper-green flex justify-between items-center text-white font-semibold">
-        <h2>Mis en vente :</h2>
+        <h2 class="text-sm uppercase">Mis en vente :</h2>
 
         <div class="flex items-center">
             <p class="text-lg">
@@ -61,7 +61,7 @@
     </div>
 
     <div class="wrapper wrapper-blue flex justify-between items-center text-white font-semibold">
-        <h2>Total items :</h2>
+        <h2 class="text-sm uppercase">Total items :</h2>
 
         <p class="text-lg">
             {% if noSales %}
@@ -73,7 +73,7 @@
     </div>
 
     <div class="wrapper wrapper-blue flex justify-between items-center text-white font-semibold">
-        <h2>Total items vendus :</h2>
+        <h2 class="text-sm uppercase">Total items vendus :</h2>
 
         <p class="text-lg">
             {% if noSales %}
@@ -85,7 +85,7 @@
     </div>
 
     <div class="wrapper wrapper-red flex justify-between items-center text-white font-semibold">
-        <h2>Taxe HDV :</h2>
+        <h2 class="text-sm uppercase">Taxe HDV :</h2>
 
         <div class="flex items-center">
             <p class="text-lg">
@@ -100,7 +100,7 @@
     </div>
 
     <div class="wrapper wrapper-orange flex justify-between items-center text-white font-semibold">
-        <h2>Profit en attente :</h2>
+        <h2 class="text-sm uppercase">Profit en attente :</h2>
 
         <div class="flex items-center">
             <p class="text-lg">
