--- a/assets/styles/components/_tabs.scss
+++ b/assets/styles/components/_tabs.scss
@@ -1,5 +1,5 @@
 .tabs {
-  @apply bg-gray-100 dark:bg-gray-800 dark:text-gray-100 border border-gray-300 dark:border-gray-600 relative inline-flex rounded-lg overflow-hidden;
+  @apply bg-gray-100 dark:bg-gray-800 border border-gray-300 dark:border-gray-600 relative inline-flex rounded-lg overflow-hidden;
 }
 
 .tab-item {
@@ -19,14 +19,10 @@
 }
 
 .tab-pane {
-  @apply text-sm hidden gap-4;
+  @apply hidden gap-4;
 
   img{
     @apply rounded-lg
-  }
-
-  h2 {
-    @apply text-primary-400 dark:text-primary-400 text-4xl;
   }
 
   h3 {
