--- a/templates/record/show.html.twig
+++ b/templates/record/show.html.twig
@@ -13,7 +13,8 @@
 
        <div class="wrapper wrapper-style grid gap-4">
            <h2 class="family text-3xl">Vidéo du Record :</h2>
-           <iframe class="aspect-video w-full rounded-lg overflow-hidden" src="{{ record.videoLink }}" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+           <iframe class="aspect-video w-full rounded-lg overflow-hidden" src="" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+           <iframe width="560" height="315" src="{{ record.videoLink }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
        </div>
    </section>
 
